src/test/ui/error-codes/E0433.rs
fn main () {
    let map = BTreeMap::new(); //~ ERROR E0433
}
